# freekee

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  bunfig.toml  clippy.toml  deny.toml  package.json
.cargo/: config.toml
.github/workflows/: ci.yml
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs  strength.rs
crates/audit/src/rules/: cipher.rs  entries.rs  format.rs  kdf.rs  mod.rs  passphrase.rs
crates/audit/tests/: deferred_rules.rs  rules.rs
crates/audit/tests/common/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/cmd/: audit.rs  get.rs  history.rs  info.rs  init.rs  ls.rs  mod.rs  mv.rs  rm.rs  set.rs  verify.rs
crates/cli/src/cmd/rotate/: cipher.rs  entry.rs  kdf.rs  kdf_params.rs  keyfile.rs  mod.rs  passphrase.rs
crates/cli/tests/: cli_mutate.rs  cli_smoke.rs  secret_leakage.rs
crates/core/: Cargo.toml
crates/core/src/: backup.rs  error.rs  lib.rs  password.rs  vault.rs
crates/core/tests/: vault.rs
crates/kdbx/: Cargo.toml
crates/kdbx/src/: error.rs  lib.rs  path.rs  snapshot.rs
crates/kdbx/tests/: mutate.rs  negative.rs  roundtrip.rs  snapshot.rs  wrapper.rs
crates/kdbx/tests/common/: mod.rs
crates/tauri-bridge/: Cargo.toml
crates/tauri-bridge/src/: lib.rs
docs/: design.md  kdbx-compat-matrix.md
tests/roundtrip/fixtures/: README.md
tests/roundtrip/fixtures/empty/: db.kdbx  expected.json
tests/roundtrip/fixtures/groups-and-entries/: db.kdbx
tests/roundtrip/fixtures/kdbx3-legacy/: db.kdbx  expected.json
tests/roundtrip/fixtures/kdbx40-legacy/: db.kdbx  expected.json
tests/roundtrip/fixtures/kdbx41-features/: expected.json
tests/roundtrip/fixtures/single-entry/: db.kdbx  expected.json
tests/roundtrip/fixtures/with-attachments/: db.kdbx  expected.json
tests/roundtrip/fixtures/with-autotype/: db.kdbx  expected.json
tests/roundtrip/fixtures/with-custom-data/: db.kdbx  expected.json
tests/roundtrip/fixtures/with-custom-icons/: db.kdbx  expected.json
tests/roundtrip/fixtures/with-history/: db.kdbx  expected.json
tests/roundtrip/fixtures/with-keyfile/: db.kdbx  expected.json
tests/roundtrip/fixtures/with-tags-and-expiry/: db.kdbx  expected.json
