[workspace]
resolver = "2"
members = [
  "crates/kdbx",
  "crates/audit",
  "crates/core",
  "crates/cli",
  "crates/tauri-bridge",
]
# Local clones of upstream deps (gitignored) for investigation only.
exclude = ["vendor"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/davidroeca/freekee"

[workspace.dependencies]
# Crypto-adjacent: pinned exact per AGENTS.md.
keepass = { version = "=0.12.1", default-features = false, features = ["save_kdbx4", "challenge_response"] }

# Caret-permitted utilities.
thiserror = "2"
zeroize = { version = "1.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
zxcvbn = "3.1"
clap = { version = "4.5", features = ["derive", "wrap_help", "env"] }
anyhow = "1"
rpassword = "7"

# Dev-only.
proptest = "1.5"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
needless_collect = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Compile dependencies at opt-level=3 in dev/test builds. Argon2id and
# ChaCha20 are crypto-bound and run >5x slower at opt-level=0; this
# brings the round-trip suite back under a tolerable budget while
# keeping our own crates at fast incremental compile.
[profile.dev.package."*"]
opt-level = 3

