[package]
name = "cli"
description = "freekee command-line interface. See docs/design.md §8."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "freekee"
path = "src/main.rs"

[dependencies]
freekee-core = { path = "../core" }
kdbx = { path = "../kdbx" }
audit = { path = "../audit" }
clap.workspace = true
anyhow.workspace = true
zeroize.workspace = true
rpassword.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
# `keepass` is used in `tests/secret_leakage.rs` to build a canary
# database with a sentinel entry password.
keepass.workspace = true

[lints]
workspace = true
