[package]
name = "kdbx"
description = "freekee KDBX4 wrapper. See docs/design.md §6."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
keepass.workspace = true
thiserror.workspace = true
zeroize.workspace = true
chrono.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[[bin]]
name = "dump-expected"
path = "src/bin/dump-expected.rs"
required-features = ["dump-expected"]

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
serde = { workspace = true }
serde_json.workspace = true

[features]
default = []
# Gates the post-write `keepassxc-cli` re-read step. CI on; local off (slow).
keepassxc-verify = []
# Builds the `dump-expected` helper binary.
dump-expected = ["dep:serde", "dep:serde_json"]

[lints]
workspace = true
