[package]
name = "kdbx"
description = "freekee KDBX4 wrapper. See docs/design.md section 6."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
keepass.workspace = true
thiserror.workspace = true
zeroize.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
# `keepass`'s `KdfConfig::Argon2id` variant carries an `argon2::Version`.
# Crate is named `rust-argon2` on crates.io but exposes itself as
# `argon2` in code. We hardcode `Version13` and never expose the type.
rust-argon2 = "3.0"

[[bin]]
name = "dump-expected"
path = "src/bin/dump-expected.rs"
required-features = ["dump-expected"]

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
serde = { workspace = true }
serde_json.workspace = true

[features]
default = []
# Gates the post-write `keepassxc-cli` re-read step. CI on; local off (slow).
keepassxc-verify = []
# Gates the `dump-expected` helper binary.
dump-expected = []

[lints]
workspace = true
