[package]
name = "tauri-bridge"
description = "freekee Tauri 2 command handlers (DTOs only). Deferred to milestone 1. See docs/design.md section 5."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]

[lints]
workspace = true
